Updated doc release: dev

--- a/dev/_examples/examples.html
+++ b/dev/_examples/examples.html
@@ -733,6 +733,10 @@
 <p class="system-message-title">System Message: ERROR/6 (<span class="docutils literal">/localdisk/tools/tc/agent3/work/d3686067e4683a0d/sdc-recipe/docs/source/_examples/examples.rst</span>, line 1653)</p>
 <p>Command 'python ./dataframe/groupby/dataframe_groupby_sum.py' failed: [Errno 2] No such file or directory: '/localdisk/tools/tc/agent3/work/d3686067e4683a0d/sdc-recipe/docs/examples': '/localdisk/tools/tc/agent3/work/d3686067e4683a0d/sdc-recipe/docs/examples'</p>
 </div>
+<div class="system-message">
+<p class="system-message-title">System Message: ERROR/6 (<span class="docutils literal">/localdisk/tools/tc/agent3/work/d3686067e4683a0d/sdc-recipe/docs/source/_examples/examples.rst</span>, line 1663)</p>
+<p>Command 'python ./dataframe/groupby/dataframe_groupby_var.py' failed: [Errno 2] No such file or directory: '/localdisk/tools/tc/agent3/work/d3686067e4683a0d/sdc-recipe/docs/examples': '/localdisk/tools/tc/agent3/work/d3686067e4683a0d/sdc-recipe/docs/examples'</p>
+</div>
 
 
           </div>
